ResponderPerguntaPane - Implementado. Pede primeiro o código, se estiver ativa a pergunta mostra a informação e um campo para responder e submeter. Senão dá um alert a avisar.